exports[`test Correct rendering of EventTypes-Settings 1`] = `
<div
  className="event-types-settings">
  
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to a Product and press the \"Plus\"-Button.
  </p>
</div>
`;

exports[`test Receive eventTypes 1`] = `
<div
  className="event-types-settings">
  
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          0
        </td>
        <td>
          Error Events
        </td>
        <td />
        <td
          className="center">
          <a
            className="nav-link"
            data-target="#delete-prompt-modal"
            data-toggle="modal">
            <i
              className="fa fa-trash" />
          </a>
          <div
            className="delete-prompt modal fade"
            id="delete-prompt-modal"
            role="dialog"
            tabIndex="-1">
            <div
              className="modal-dialog modal-md"
              role="document">
              <div
                className="modal-content">
                <div
                  className="modal-header">
                  <h5
                    className="modal-title"
                    id="delete-prompt-label">
                    Delete Event Type?
                  </h5>
                </div>
                <div
                  className="modal-body">
                  Do you really want to delete this event type? This is a destructive action and cannot be undone.
                </div>
                <div
                  className="modal-footer">
                  <button
                    className="btn"
                    onClick={[Function]}
                    type="button">
                    <div>
                      Abort
                    </div>
                  </button>
                  <button
                    className="btn"
                    onClick={[Function]}
                    type="button">
                    <div>
                      Submit
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <p>
    To add a new Event-Type please refer to a Product and press the \"Plus\"-Button.
  </p>
</div>
`;

exports[`test Receiving 403 error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    Your are not allowed to modify this Event-Type
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to a Product and press the \"Plus\"-Button.
  </p>
</div>
`;

exports[`test Receiving 500 error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    You can not delete this Event-Type, because of existing dependencies<br/>Dependent eventTypes: There still exist dependencies concerning this eventType
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to a Product and press the \"Plus\"-Button.
  </p>
</div>
`;

exports[`test Receiving undefined error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    A critical connection error occurred!
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to a Product and press the \"Plus\"-Button.
  </p>
</div>
`;
